// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet in RTL renders CustomHeight 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="headlessui-portal-root"
    >
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      >
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
        <div>
          <div
            aria-labelledby="headlessui-dialog-title-:rl:"
            aria-modal="true"
            class="relative z-10"
            data-headlessui-state="open"
            id="headlessui-dialog-:ri:"
            role="dialog"
          >
            <div
              class="fixed inset-0 bg-black/[0.56]"
            />
            <div
              class="fixed inset-0"
            >
              <div
                class="absolute inset-x-0 bottom-0 rounded-t-xl bg-gohan translate-y-full shadow-moon-lg duration-200 transition-all h-[77%]"
                data-headlessui-state="open"
                id="headlessui-dialog-panel-:rj:"
              >
                <div
                  class="h-full overflow-y-auto"
                >
                  <div
                    class="sticky inset-x-0 top-0 flex flex-col items-center justify-start pt-2 min-h-[48px] z-10 bg-gohan rounded-t-xl"
                  >
                    <div
                      class="w-10 h-1 rounded bg-beerus"
                    />
                    <div
                      class="w-full"
                    >
                      <div
                        class="p-4 border-b-2 border-beerus"
                      >
                        <h3
                          class="text-moon-18 text-bulma font-medium text-center"
                          data-headlessui-state="open"
                          id="headlessui-dialog-title-:rl:"
                        >
                          I am gonna show you some data whether you like it or not!
                        </h3>
                      </div>
                    </div>
                  </div>
                  <div
                    class="p-2"
                  >
                    <div
                      class="table-wrapper sm:overflow-auto overflow-scroll no-scrollbar flex flex-col sticky"
                      role="table"
                    >
                      <div
                        class="flex flex-col sticky top-0 z-[99]"
                      >
                        <div
                          class="flex rounded-moon-s-sm sticky"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            First Name
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Last Name
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Age
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Money
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Activity
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Status
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                        </div>
                        <div
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col relative z-0 no-scrollbar gap-1"
                        role="rowgroup"
                      >
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Milton
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Friedman
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              0
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              0
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            0
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            0
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Thomas
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Sowell
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              22
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              10000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            100
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            100
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Milton
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Friedman
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              44
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              20000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            200
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            200
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Thomas
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Sowell
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              66
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              30000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            300
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            300
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Milton
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Friedman
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              88
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              40000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            400
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            400
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="p-2"
                  >
                    <button
                      class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma w-full"
                      type="button"
                    >
                      I don't wanna see this
                      <span
                        aria-hidden="true"
                        class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
    >
      <div
        dir="rtl"
      >
        <button
          class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
          type="button"
        >
          Initialize uncloaking
          <span
            aria-hidden="true"
            class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
        <div
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        />
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      dir="rtl"
    >
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
        type="button"
      >
        Initialize uncloaking
        <span
          aria-hidden="true"
          class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
        />
      </button>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BottomSheet in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="headlessui-portal-root"
    >
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      >
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
        <div>
          <div
            aria-labelledby="headlessui-dialog-title-:rd:"
            aria-modal="true"
            class="relative z-10"
            data-headlessui-state="open"
            id="headlessui-dialog-:rb:"
            role="dialog"
          >
            <div
              class="fixed inset-0"
            >
              <div
                class="absolute inset-x-0 bottom-0 rounded-t-xl bg-gohan translate-y-full h-[64%] overflow-y-auto duration-200 transition-all"
                data-headlessui-state="open"
                id="headlessui-dialog-panel-:rc:"
              >
                <div
                  class="p-4 border-b-2 border-beerus"
                >
                  <h3
                    class="text-moon-18 text-bulma font-medium"
                    data-headlessui-state="open"
                    id="headlessui-dialog-title-:rd:"
                  >
                    Do you wear skinny jeans?
                  </h3>
                </div>
                <p
                  class="p-4 text-trunks"
                >
                  I'm baby vaporware flexitarian scenester lyft activated charcoal tacos. Hashtag etsy literally irony yr 3 wolf moon PBR&B cred banjo lyft air plant edison bulb. Salvia next level pitchfork single-origin coffee adaptogen. Neutra tilde sartorial Brooklyn shaman schlitz. Roof party irony tattooed bicycle rights. Ethical you probably haven't heard of them literally bespoke PBR&B. Tattooed artisan twee, kinfolk kale chips taxidermy austin kitsch williamsburg tousled ugh.
                </p>
                <div
                  class="p-4"
                >
                  <button
                    class="px-4 h-12 py-3 gap-2 text-moon-16 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary w-full"
                    type="button"
                  >
                    I'm honestly done
                    <span
                      aria-hidden="true"
                      class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
    >
      <div
        dir="rtl"
      >
        <button
          class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
          type="button"
        >
          My mind is ready
          <span
            aria-hidden="true"
            class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
        <div
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        />
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      dir="rtl"
    >
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
        type="button"
      >
        My mind is ready
        <span
          aria-hidden="true"
          class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
        />
      </button>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BottomSheet in RTL renders LargeWithOptionalExtras 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="headlessui-portal-root"
    >
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      >
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
        <div>
          <div
            aria-labelledby="headlessui-dialog-title-:rh:"
            aria-modal="true"
            class="relative z-10"
            data-headlessui-state="open"
            id="headlessui-dialog-:re:"
            role="dialog"
          >
            <div
              class="fixed inset-0 bg-black/[0.56]"
            />
            <div
              class="fixed inset-0"
            >
              <div
                class="absolute inset-x-0 bottom-0 rounded-t-xl bg-gohan translate-y-full h-[88%] shadow-moon-lg duration-200 transition-all"
                data-headlessui-state="open"
                id="headlessui-dialog-panel-:rf:"
              >
                <div
                  class="h-full overflow-y-auto"
                >
                  <div
                    class="sticky inset-x-0 top-0 flex flex-col items-center justify-start pt-2 min-h-[48px] z-10 bg-gohan rounded-t-xl"
                  >
                    <div
                      class="w-10 h-1 rounded bg-beerus"
                    />
                    <div
                      class="w-full"
                    >
                      <div
                        class="p-4 border-b-2 border-beerus"
                      >
                        <h3
                          class="text-moon-18 text-bulma font-medium text-center"
                          data-headlessui-state="open"
                          id="headlessui-dialog-title-:rh:"
                        >
                          Forgot password?
                        </h3>
                      </div>
                    </div>
                  </div>
                  <p
                    class="p-2 text-trunks"
                  >
                    If you change your password, you will be unable to withdraw for 48 hours due to security reasons.
                  </p>
                  <div
                    class="p-2"
                  >
                    <div
                      class="w-full max-w-full relative z-0 rounded-moon-i-xs"
                    >
                      <label
                        class="block text-bulma pb-2 text-moon-16"
                      >
                        Username or email
                      </label>
                      <input
                        class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none bg-gohan h-10 leading-10 rounded-moon-i-xs hover:rounded-moon-i-xs focus:rounded-moon-i-xs invalid:rounded-moon-i-xs before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input input-dt-shared invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err"
                        placeholder=""
                        type="email"
                      />
                    </div>
                  </div>
                  <div
                    class="p-2"
                  >
                    <button
                      class="px-4 h-12 py-3 gap-2 text-moon-16 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-tertiary w-full"
                      type="button"
                    >
                      Send
                      <span
                        aria-hidden="true"
                        class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                      />
                    </button>
                    <div
                      class="p-2 mt-4 rounded-lg bg-goku"
                    >
                      <h3
                        class="p-2 text-lg font-medium leading-6 border-b-2 text-bulma border-beerus"
                      >
                        Need some help?
                      </h3>
                      <div
                        class="flex mt-2"
                      >
                        <svg
                          class="text-moon-48 text-bulma"
                          fill="none"
                          height="1em"
                          viewBox="0 0 32 32"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.5 11L13.8221 15.7529C15.1467 16.6128 16.8532 16.6128 18.1779 15.7529L25.5 11M6.5 11L6.5 21C6.5 22.1046 7.39543 23 8.5 23L23.5 23C24.6046 23 25.5 22.1046 25.5 21V11M6.5 11C6.5 9.89546 7.39543 9.00002 8.5 9.00001L23.5 9C24.6046 9 25.5 9.89546 25.5 11"
                            stroke="black"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                        <div
                          class="px-2"
                        >
                          <p
                            class="font-medium text-bulma"
                          >
                            Email us
                          </p>
                          <p
                            class="text-xs text-trunks"
                          >
                            Contact us via email
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
    >
      <div
        dir="rtl"
      >
        <button
          class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
          type="button"
        >
          Show it to me!
          <span
            aria-hidden="true"
            class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
        <div
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        />
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      dir="rtl"
    >
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
        type="button"
      >
        Show it to me!
        <span
          aria-hidden="true"
          class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
        />
      </button>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BottomSheet renders CustomHeight 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="headlessui-portal-root"
    >
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      >
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
        <div>
          <div
            aria-labelledby="headlessui-dialog-title-:ra:"
            aria-modal="true"
            class="relative z-10"
            data-headlessui-state="open"
            id="headlessui-dialog-:r7:"
            role="dialog"
          >
            <div
              class="fixed inset-0 bg-black/[0.56]"
            />
            <div
              class="fixed inset-0"
            >
              <div
                class="absolute inset-x-0 bottom-0 rounded-t-xl bg-gohan translate-y-full shadow-moon-lg duration-200 transition-all h-[77%]"
                data-headlessui-state="open"
                id="headlessui-dialog-panel-:r8:"
              >
                <div
                  class="h-full overflow-y-auto"
                >
                  <div
                    class="sticky inset-x-0 top-0 flex flex-col items-center justify-start pt-2 min-h-[48px] z-10 bg-gohan rounded-t-xl"
                  >
                    <div
                      class="w-10 h-1 rounded bg-beerus"
                    />
                    <div
                      class="w-full"
                    >
                      <div
                        class="p-4 border-b-2 border-beerus"
                      >
                        <h3
                          class="text-moon-18 text-bulma font-medium text-center"
                          data-headlessui-state="open"
                          id="headlessui-dialog-title-:ra:"
                        >
                          I am gonna show you some data whether you like it or not!
                        </h3>
                      </div>
                    </div>
                  </div>
                  <div
                    class="p-2"
                  >
                    <div
                      class="table-wrapper sm:overflow-auto overflow-scroll no-scrollbar flex flex-col sticky"
                      role="table"
                    >
                      <div
                        class="flex flex-col sticky top-0 z-[99]"
                      >
                        <div
                          class="flex rounded-moon-s-sm sticky"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            First Name
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Last Name
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Age
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Money
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Activity
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                          <div
                            class="relative text-start justify-between font-medium text-moon-14 px-3 py-2 bg-goku"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          >
                            Status
                            <div
                              class="inline-block w-px h-full absolute top-0 right-0 z-1 after:content-none after:absolute after:w-px after:h-[70%] after:bottom-[15%] after:right-0 "
                              draggable="false"
                              role="separator"
                              style="cursor: col-resize;"
                            />
                          </div>
                        </div>
                        <div
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                          <div
                            class="relative"
                            colspan="1"
                            role="columnheader"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; position: relative;"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col relative z-0 no-scrollbar gap-1"
                        role="rowgroup"
                      >
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Milton
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Friedman
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              0
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              0
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            0
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            0
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Thomas
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Sowell
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              22
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              10000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            100
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            100
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Milton
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Friedman
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              44
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              20000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            200
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            200
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Thomas
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Sowell
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              66
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              30000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            300
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            300
                          </div>
                        </div>
                        <div
                          class="relative focus-visible:outline-none flex rounded-moon-s-sm transition-colors first:rounded-tl-0 first:rounded-bl-0 last:rounded-tl-0 last:rounded-br-0 after:mt-0 text-bulma bg-gohan"
                          role="row"
                          style="display: flex; flex: 1 0 auto; min-width: 0px;"
                        >
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-l-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Milton
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            Friedman
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              88
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            <span>
                              40000
                            </span>
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            400
                          </div>
                          <div
                            class="relative box-border justify-between items-center text-start text-moon-14 px-3 py-2 rounded-r-lg text-bulma bg-gohan"
                            role="cell"
                            style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                          >
                            400
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="p-2"
                  >
                    <button
                      class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma w-full"
                      type="button"
                    >
                      I don't wanna see this
                      <span
                        aria-hidden="true"
                        class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
    >
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
        type="button"
      >
        Initialize uncloaking
        <span
          aria-hidden="true"
          class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
        />
      </button>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <button
      class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
      type="button"
    >
      Initialize uncloaking
      <span
        aria-hidden="true"
        class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
      />
    </button>
    <div
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BottomSheet renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-hidden="true"
    >
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
        type="button"
      >
        My mind is ready
        <span
          aria-hidden="true"
          class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
        />
      </button>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
    <div
      id="headlessui-portal-root"
    >
      <div
        data-headlessui-portal=""
      >
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
        <div>
          <div
            aria-labelledby="headlessui-dialog-title-:r2:"
            aria-modal="true"
            class="relative z-10"
            data-headlessui-state="open"
            id="headlessui-dialog-:r0:"
            role="dialog"
          >
            <div
              class="fixed inset-0"
            >
              <div
                class="absolute inset-x-0 bottom-0 rounded-t-xl bg-gohan translate-y-full h-[64%] overflow-y-auto duration-200 transition-all"
                data-headlessui-state="open"
                id="headlessui-dialog-panel-:r1:"
              >
                <div
                  class="p-4 border-b-2 border-beerus"
                >
                  <h3
                    class="text-moon-18 text-bulma font-medium"
                    data-headlessui-state="open"
                    id="headlessui-dialog-title-:r2:"
                  >
                    Do you wear skinny jeans?
                  </h3>
                </div>
                <p
                  class="p-4 text-trunks"
                >
                  I'm baby vaporware flexitarian scenester lyft activated charcoal tacos. Hashtag etsy literally irony yr 3 wolf moon PBR&B cred banjo lyft air plant edison bulb. Salvia next level pitchfork single-origin coffee adaptogen. Neutra tilde sartorial Brooklyn shaman schlitz. Roof party irony tattooed bicycle rights. Ethical you probably haven't heard of them literally bespoke PBR&B. Tattooed artisan twee, kinfolk kale chips taxidermy austin kitsch williamsburg tousled ugh.
                </p>
                <div
                  class="p-4"
                >
                  <button
                    class="px-4 h-12 py-3 gap-2 text-moon-16 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary w-full"
                    type="button"
                  >
                    I'm honestly done
                    <span
                      aria-hidden="true"
                      class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <button
      class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
      type="button"
    >
      My mind is ready
      <span
        aria-hidden="true"
        class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
      />
    </button>
    <div
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BottomSheet renders LargeWithOptionalExtras 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="headlessui-portal-root"
    >
      <div
        data-headlessui-portal=""
      />
      <div
        data-headlessui-portal=""
      >
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
        <div>
          <div
            aria-labelledby="headlessui-dialog-title-:r6:"
            aria-modal="true"
            class="relative z-10"
            data-headlessui-state="open"
            id="headlessui-dialog-:r3:"
            role="dialog"
          >
            <div
              class="fixed inset-0 bg-black/[0.56]"
            />
            <div
              class="fixed inset-0"
            >
              <div
                class="absolute inset-x-0 bottom-0 rounded-t-xl bg-gohan translate-y-full h-[88%] shadow-moon-lg duration-200 transition-all"
                data-headlessui-state="open"
                id="headlessui-dialog-panel-:r4:"
              >
                <div
                  class="h-full overflow-y-auto"
                >
                  <div
                    class="sticky inset-x-0 top-0 flex flex-col items-center justify-start pt-2 min-h-[48px] z-10 bg-gohan rounded-t-xl"
                  >
                    <div
                      class="w-10 h-1 rounded bg-beerus"
                    />
                    <div
                      class="w-full"
                    >
                      <div
                        class="p-4 border-b-2 border-beerus"
                      >
                        <h3
                          class="text-moon-18 text-bulma font-medium text-center"
                          data-headlessui-state="open"
                          id="headlessui-dialog-title-:r6:"
                        >
                          Forgot password?
                        </h3>
                      </div>
                    </div>
                  </div>
                  <p
                    class="p-2 text-trunks"
                  >
                    If you change your password, you will be unable to withdraw for 48 hours due to security reasons.
                  </p>
                  <div
                    class="p-2"
                  >
                    <div
                      class="w-full max-w-full relative z-0 rounded-moon-i-xs"
                    >
                      <label
                        class="block text-bulma pb-2 text-moon-16"
                      >
                        Username or email
                      </label>
                      <input
                        class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none bg-gohan h-10 leading-10 rounded-moon-i-xs hover:rounded-moon-i-xs focus:rounded-moon-i-xs invalid:rounded-moon-i-xs before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input input-dt-shared invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err"
                        placeholder=""
                        type="email"
                      />
                    </div>
                  </div>
                  <div
                    class="p-2"
                  >
                    <button
                      class="px-4 h-12 py-3 gap-2 text-moon-16 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-tertiary w-full"
                      type="button"
                    >
                      Send
                      <span
                        aria-hidden="true"
                        class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                      />
                    </button>
                    <div
                      class="p-2 mt-4 rounded-lg bg-goku"
                    >
                      <h3
                        class="p-2 text-lg font-medium leading-6 border-b-2 text-bulma border-beerus"
                      >
                        Need some help?
                      </h3>
                      <div
                        class="flex mt-2"
                      >
                        <svg
                          class="text-moon-48 text-bulma"
                          fill="none"
                          height="1em"
                          viewBox="0 0 32 32"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.5 11L13.8221 15.7529C15.1467 16.6128 16.8532 16.6128 18.1779 15.7529L25.5 11M6.5 11L6.5 21C6.5 22.1046 7.39543 23 8.5 23L23.5 23C24.6046 23 25.5 22.1046 25.5 21V11M6.5 11C6.5 9.89546 7.39543 9.00002 8.5 9.00001L23.5 9C24.6046 9 25.5 9.89546 25.5 11"
                            stroke="black"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                        <div
                          class="px-2"
                        >
                          <p
                            class="font-medium text-bulma"
                          >
                            Email us
                          </p>
                          <p
                            class="text-xs text-trunks"
                          >
                            Contact us via email
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-hidden="true"
          data-headlessui-focus-guard="true"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          type="button"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
    >
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
        type="button"
      >
        Show it to me!
        <span
          aria-hidden="true"
          class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
        />
      </button>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <button
      class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
      type="button"
    >
      Show it to me!
      <span
        aria-hidden="true"
        class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
      />
    </button>
    <div
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
